@@ -1,3 +1,8 @@
+2023-08-26  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pvm-alloc.h: Fix prototypes for
+	pvm_alloc_{register,unregister}_thread.
+
 2023-08-24  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* pickles/ios.pk: Use "closure" hyperlinks to guarantee that they
